internal/controller/test_data/wfs/complete/expected/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    pdok.nl/app: mapserver
    dataset: dataset
    dataset-owner: datasetOwner
    pdok.nl/inspire: true
    service-type: wfs
    service-version: v1_0
    theme: theme
  name: complete-wfs-mapserver
  namespace: default
  ownerReferences:
    - apiVersion: pdok.nl/v3
      kind: WFS
      name: complete
      uid: ""
      blockOwnerDeletion: true
      controller: true
  annotations:
    uptime.pdok.nl/id: fbe1241d4fed04fb85d2135f182427861156f692
    uptime.pdok.nl/name: some Service title WFS
    uptime.pdok.nl/tags: dataset,datasetOwner,public-stats,theme,v1_0,wfs
    uptime.pdok.nl/url: http://localhost:32788/datasetOwner/dataset/theme/wfs/v1_0?Service=WFS&Request=GetCapabilities
spec:
  routes:
    - kind: Rule
      match: Host(`localhost`) && Path(`/datasetOwner/dataset/theme/wfs/v1_0`)
      middlewares:
        - name: complete-wfs-mapserver-headers
      services:
        - kind: Service
          name: complete-wfs-mapserver
          port: 80
    - kind: Rule
      match: Host(`localhost`) && Path(`/other/path`)
      middlewares:
        - name: complete-wfs-mapserver-headers
      services:
        - kind: Service
          name: complete-wfs-mapserver
          port: 80
