internal/controller/test_data/wfs/complete/expected/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    pdok.nl/app: mapserver
    dataset: dataset
    dataset-owner: datasetOwner
    pdok.nl/inspire: true
    service-type: wfs
    service-version: v1_0
    theme: theme
  name: complete-wfs-mapserver
  namespace: default
  ownerReferences:
    - apiVersion: pdok.nl/v3
      kind: WFS
      name: complete
      uid: ""
      blockOwnerDeletion: true
      controller: true
spec:
  type: ClusterIP
  sessionAffinity: None
  internalTrafficPolicy: Cluster
  ports:
    - name: mapserver
      port: 80
      targetPort: 80
      protocol: TCP
    - name: metric
      port: 9117
      targetPort: 9117
      protocol: TCP
  selector:
    pdok.nl/app: mapserver
    dataset: dataset
    dataset-owner: datasetOwner
    pdok.nl/inspire: true
    service-type: wfs
    service-version: v1_0
    theme: theme
